# Ashen

./: CMakeLists.txt  README.md
cmake/: FetchAndIncludeLibraries.cmake
project/: CMakeLists.txt
project/shaders/: Functions.glsl  GroundFromAtmosphere.frag  GroundFromAtmosphere.vert  GroundFromSpace.frag  GroundFromSpace.vert  Helper_Math.glsl  Helper_PhaseFunctions.glsl  Helper_Scattering.glsl  PostProcess.frag  SkyFromAtmosphere.frag  SkyFromAtmosphere.vert  SkyFromSpace.frag  SkyFromSpace.vert  SpaceFromAtmosphere.vert  triangle.vert
project/src/: Renderer.cpp  Renderer.h  Vertex.h  VulkanContext.cpp  VulkanContext.h  Window.cpp  Window.h  main.cpp
project/src/helpers/: ConsoleTextSettings.h  Timer.cpp  Timer.h  VulkanHelper.h
project/src/misc/: Camera.cpp  Camera.h  Window.cpp  Window.h
project/src/rendering/: Renderer.cpp  Renderer.h  Vertex.h  VulkanContext.cpp  VulkanContext.h
project/src/rendering/memory/: Buffer.cpp  Buffer.h  Image.cpp  Image.h
project/src/rendering/pipeline/: Descriptors.cpp  Descriptors.h  Pipeline.cpp  Pipeline.h
project/src/rendering/types/: Mesh.cpp  Mesh.h  Types.h
